Added Communication between WAS and Service

--- a/FFF_Elis/EPAS/Components/Components/OperationResponseListComponent.razor
+++ b/FFF_Elis/EPAS/Components/Components/OperationResponseListComponent.razor
@@ -8,7 +8,7 @@
         switch (item.Response)
         {
             case OperationResponseEnum.Coming:
-                <a class="fro-list-item rueckmeldung-ja" style="margin-bottom: 0px;">
+                <a class="fro-list-item rueckmeldung-ja" style="margin-bottom: 0;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Username</div>
@@ -18,7 +18,7 @@
                 </a>
                 break;
             case OperationResponseEnum.Available:
-                <a class="fro-list-item rueckmeldung-verfuegbar" style="margin-bottom: 0px;">
+                <a class="fro-list-item rueckmeldung-verfuegbar" style="margin-bottom: 0;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Username</div>
@@ -28,7 +28,7 @@
                 </a>
                 break;
             case OperationResponseEnum.NotAvailable:
-                <a class="fro-list-item rueckmeldung-nein" style="margin-bottom: 0px;">
+                <a class="fro-list-item rueckmeldung-nein" style="margin-bottom: 0;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Username</div>
@@ -38,7 +38,7 @@
                 </a>
                 break;
             case OperationResponseEnum.Read:
-                <a class="fro-list-item rueckmeldung-nein" style="margin-bottom: 0px;">
+                <a class="fro-list-item rueckmeldung-nein" style="margin-bottom: 0;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Username</div>
