--- a/FFF_Elis/EPAS/Components/Components/VisualItemComponent.razor
+++ b/FFF_Elis/EPAS/Components/Components/VisualItemComponent.razor
@@ -19,7 +19,7 @@
             <p>@_currentVisualItem.Description</p>
             break;
         case VisualItemType.EinsatzOOE:
-            <EinsaetzeOOE />
+            <OperationsOOE />
             break;    
         default:
             Console.WriteLine("Unknown VisualItemType");
