--- a/FFF_Elis/FFF_Elis/Components/Components/RueckmeldeListe.razor
+++ b/FFF_Elis/FFF_Elis/Components/Components/RueckmeldeListe.razor
@@ -6,7 +6,7 @@
     {
         switch (item.Status)
         {
-            case RueckmeldungsStatus.Komme:
+            case RueckmeldungsStatus.Coming:
                 <a class="fro-list-item rueckmeldung-ja" style="margin-bottom: 0px;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
@@ -16,7 +16,7 @@
                     </span>
                 </a>
                 break;
-            case RueckmeldungsStatus.Verfuegbar:
+            case RueckmeldungsStatus.Available:
                 <a class="fro-list-item rueckmeldung-verfuegbar" style="margin-bottom: 0px;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
@@ -26,7 +26,7 @@
                     </span>
                 </a>
                 break;
-            case RueckmeldungsStatus.NichtVerfuegbar:
+            case RueckmeldungsStatus.NotAvailable:
                 <a class="fro-list-item rueckmeldung-nein" style="margin-bottom: 0px;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
