--- a/FFF_Elis/EPAS/Components/App.razor
+++ b/FFF_Elis/EPAS/Components/App.razor
@@ -1,34 +1,34 @@
 ﻿<!DOCTYPE html>
 <html class="fro-dark-context" lang="en">
 
-<head class="fro-dark-context">
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <base href="/"/>
+    <head class="fro-dark-context">
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <base href="/"/>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
-    <link href="app.css" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
+        <link href="app.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="leaflet/leaflet.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-    <script src="leaflet/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
-    <script src="js/BoundaryCanvas.js"></script>
-    
-    <title>EPAS</title>
-    
-    <link rel="icon" type="image/png" href="favicon.ico"/>
-    <link rel="stylesheet" href="styles/ds.css"/>
-    <HeadOutlet @rendermode="@InteractiveServer"/>
-</head>
+        <link rel="stylesheet" href="leaflet/leaflet.css" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+        <script src="leaflet/leaflet.js"></script>
+        <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+        <script src="js/BoundaryCanvas.js"></script>
+        
+        <title>EPAS</title>
+        
+        <link rel="icon" type="image/png" href="img/korpsabzeichen.png"/>
+        <link rel="stylesheet" href="styles/ds.css"/>
+        <HeadOutlet @rendermode="@InteractiveServer"/>
+    </head>
 
-<body class="fro-dark-context">
-<Routes @rendermode="@InteractiveServer"/>
-    <!-- Fehler gfundn oba wtf?????? BUG: HAAAA???? -->
-    <!--<script src="_framework/blazor.web.js"></script>-->
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="index.js"></script>
-</body>
+    <body class="fro-dark-context">
+        <Routes @rendermode="@InteractiveServer"/>
+        <!-- Fehler gfundn oba wtf?????? BUG: HAAAA???? -->
+        <script src="_framework/blazor.web.js"></script>
+        <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+        <script src="index.js"></script>
+    </body>
 
 </html>
