--- a/FFF_Elis/FFF_Elis/Components/Pages/Home.razor
+++ b/FFF_Elis/FFF_Elis/Components/Pages/Home.razor
@@ -9,7 +9,7 @@
 @inject ILocalStorageService LocalStorage
 @inject GeocodingService GeocodingService
 
-<EinsatzTimerComponent OnEinsatzClosed="OnEinsatzClosed" OnNewEinsatz="OnNewEinsatz"/>
+<!-- <EinsatzTimerComponent OnEinsatzClosed="OnEinsatzClosed" OnNewEinsatz="OnNewEinsatz"/> -->
 
 @if (EinsatzAnzeigen)
 {
@@ -34,7 +34,7 @@ else
 @code
 {
     public List<WCFBenutzer> Users { get; set; } = [];
-    public ElisClient Client { get; set; } = new ();
+    //public ElisClient Client { get; set; } = new ();
     public WCFEinsatzdaten Einsatz { get; set; } = new ();
 
     public ClientSettings ClientSettings { get; set; } = new();
@@ -43,17 +43,17 @@ else
     
     public List<Einsatzrueckmeldung> Rueckmeldungen { get; set; } =
     [
-        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
-        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
-        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
-        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar },
-        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar }
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Coming },
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Coming },
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Coming },
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Coming },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Available },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Available },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Available },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NotAvailable },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NotAvailable },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NotAvailable },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NotAvailable }
     ];
 
     public List<Waypoint> Waypoints { get; set; } = new();
@@ -98,9 +98,9 @@ else
     
     protected override void OnInitialized()
     {
-        Users = Client.Client.UserGetAll(new UserGetAllRequest(Client.Ticket.TicketID)).UserGetAllResult.ToList();
+        //Users = Client.Client.UserGetAll(new UserGetAllRequest(Client.Ticket.TicketID)).UserGetAllResult.ToList();
         //var tmp = Client.Client.EinsatzPersonGetByEinsatz(new EinsatzPersonGetByEinsatzRequest("einsatzNr", Client.Ticket.TicketID));
-        var tmp1 = Client.Client.EinsatzDataGetAll(new EinsatzDataGetAllRequest(Client.Ticket.TicketID));
+        //var tmp1 = Client.Client.EinsatzDataGetAll(new EinsatzDataGetAllRequest(Client.Ticket.TicketID));
         //var rueckmeldungen = Client.Client.EinsatzPersonGetByEinsatz(new EinsatzPersonGetByEinsatzRequest(tmp1.EinsatzDataGetAllResult.First().EinsatzNr, Client.Ticket.TicketID));
         //var coordinates = (tmp1.EinsatzDataGetAllResult.First().Fahrzeuge.First().LFKLongitude, tmp1.EinsatzDataGetAllResult.First().Fahrzeuge.First().LFKLatitude);
         //var arlamierteFFs = tmp1.EinsatzDataGetAllResult.First().Alarmierungen;
