--- a/FFF_Elis/EPAS/Components/Layout/MainLayout.razor
+++ b/FFF_Elis/EPAS/Components/Layout/MainLayout.razor
@@ -36,7 +36,7 @@
         </div>
     </header>
     <NavMenu/>
-    <MudMainContent Class="mt-16 pa-4">
+    <MudMainContent Class="mt-16 pa-4" Style="margin-left: 5%">
         @Body
     </MudMainContent>
 </MudLayout>
