--- a/FFF_Elis/EPAS/Components/Account/Pages/Login.razor
+++ b/FFF_Elis/EPAS/Components/Account/Pages/Login.razor
@@ -5,7 +5,6 @@
 @using Microsoft.AspNetCore.Authorization
 @using EPAS.Data
 
-@attribute [AllowAnonymous]
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
 @inject NavigationManager NavigationManager
@@ -66,6 +65,8 @@
 </div>
 
 @code {
+    // TODO: Keinen Plan bruada. Muss ich nochmal nachlesen.
+    
     private string? errorMessage;
 
     [CascadingParameter] private HttpContext HttpContext { get; set; } = default!;
@@ -91,18 +92,18 @@
         if (result.Succeeded)
         {
             Logger.LogInformation("User logged in.");
-            RedirectManager.RedirectTo(ReturnUrl);
+            //RedirectManager.RedirectTo(ReturnUrl);
         }
         else if (result.RequiresTwoFactor)
         {
-            RedirectManager.RedirectTo(
-                "Account/LoginWith2fa",
-                new() { ["returnUrl"] = ReturnUrl, ["rememberMe"] = Input.RememberMe });
+            //RedirectManager.RedirectTo(
+              //  "Account/LoginWith2fa",
+                //new() { ["returnUrl"] = ReturnUrl, ["rememberMe"] = Input.RememberMe });
         }
         else if (result.IsLockedOut)
         {
             Logger.LogWarning("User account locked out.");
-            RedirectManager.RedirectTo("Account/Lockout");
+            //RedirectManager.RedirectTo("Account/Lockout");
         }
         else
         {
