--- a/FFF_Elis/EPAS/Components/Routes.razor
+++ b/FFF_Elis/EPAS/Components/Routes.razor
@@ -1,7 +1,7 @@
 ﻿@using EPAS.Components.Account.Shared
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
